--- a/admin/app/views/snapshot.scala.html
+++ b/admin/app/views/snapshot.scala.html
@@ -22,7 +22,7 @@
         <a class="btn btn-primary" href="@routes.SnapshotController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
             Replay Last Snapshot
         </a>
-        <a class="btn btn-primary" href="@routes.SnapshotController.continueSnapshot" title="Continue from snapshot.">
+        <a class="btn btn-primary" href="@routes.SnapshotController.continueFromSnapshot" title="Continue from snapshot.">
             Continue from Snapshot
         </a>
         <a class="btn btn-primary" href="@routes.SnapshotController.snapshot" title="Create a snapshot.">
