--- a/admin/app/views/match_event_list.scala.html
+++ b/admin/app/views/match_event_list.scala.html
@@ -29,7 +29,7 @@
         <button class="btn btn-danger state_match_event">Finished</button>
     } else {
         @if(match_event.isStarted()) {
-            <button class="btn btn-success state_match_event">@match_event.period</button>
+            <button class="btn btn-success state_match_event">@match_event.period: @match_event.minutesPlayed min.</button>
         } else {
             <button class="btn btn-warning state_match_event">Waiting</button>
         }
