Snapshot and Salaries related tasks, most of #15372507445282

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -7,7 +7,7 @@
 <h1 class="page-header">Dashboard</h1>
 
 <div>
-    <a class="btn btn-primary" href="@SnapshotController.importSalaries" title="Import Players' salaries from a CSV file.">
+    <a class="btn btn-primary" href="@ImportController.importSalaries" title="Import Players' salaries from a CSV file.">
         Import Salaries
     </a>
     <a href="@ImportController.showImportTeams"><button class="btn btn-warning">Import Teams</button></a>
@@ -18,7 +18,7 @@
 <br/>
 
 <div>
-    <a class="btn btn-primary" href="@SnapshotController.exportSalaries" title="Export Players' salaries to a CSV file.">
+    <a class="btn btn-primary" href="@ImportController.exportSalaries" title="Export Players' salaries to a CSV file.">
         Export Salaries
     </a>
 
