--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -42,6 +42,13 @@
                 <input type="datetime-local" value="2014-06-14T00:00" id="date-pause" name="date" class="form-control" style="display:inline-block">
             }
             <button id="date-pause-ok" name="date-pause-ok" type="button" class="btn btn-sim btn-primary fforward" style="position:relative;">Go to Date</button>
+            <select id="sim-speed" onchange="changeSpeed()" class="form-control" style="width: inherit; display: inline-block;">
+                <option value="86400">1 day per second</option>
+                <option value="3600">1 hour per second</option>
+                <option value="60">1 minute per second</option>
+                <option value="2">Twice as fast</option>
+                <option value="1">Real time</option>
+            </select>
         </div>
     </div>
 </div>
@@ -55,6 +62,13 @@
 
             window.setInterval(checkReload, 200);
         });
+
+        function changeSpeed() {
+            var new_speed = $('#sim-speed').val();
+            var another_temp = $.ajax({
+                            url: "/admin/simulator_speed/"+new_speed
+                        });
+        }
 
         function repaintButtons() {
             if (is_created == "true") {
@@ -148,6 +162,8 @@
                  }
             });
         });
+
+        $('#sim-speed').
 
         $('#date-pause-ok').click(function(){
             var localDate = new Date($("#date-pause").val());
