Initial setup added to dashboard

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -6,6 +6,11 @@
 
 <h1 class="page-header">Dashboard</h1>
 
+
+<div>
+    <a href="@TestController.initialSetup"><button class="btn btn-danger">Initial Setup</button></a>
+</div>
+<br/>
 <div>
     <a class="btn btn-primary" href="@ImportController.importSalaries" title="Import Players' salaries from a CSV file.">
         Import Salaries
@@ -14,6 +19,7 @@
     <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import SoccerPlayers</button></a>
     <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
 </div>
+
 <br/>
 <br/>
 
