--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -8,7 +8,7 @@
 
 
 <div>
-    <a href="@TestController.initialSetup"><button class="btn btn-danger">Initial Setup</button></a>
+    <a href="@DashboardController.initialSetup"><button class="btn btn-danger">Initial Setup</button></a>
 </div>
 <br/>
 <div>
