Disable sim speed control if simulator is off

--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -86,7 +86,8 @@
             if (is_created == "true") {
                 $(".switch").text("Off")
                 $(".btn-sim").removeClass("disabled");
-
+                $("#sim-speed").prop("disabled", false);
+                
 
                 if (is_paused == "false") {
                     $(".btn-sim.play").attr("href", "/admin/pause_simulator");
@@ -125,6 +126,7 @@
 
                 $(".btn-sim").removeClass("btn-success");
                 $(".btn-sim").addClass("btn-primary");
+                $("#sim-speed").prop("disabled", true);
             }
         }
 
