OptaSimulator: fix cuando se quería avanzar a "1 day per second"

--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -134,6 +134,8 @@
             $("#time").load("/admin/current_date_simulator");
             $("#nextStepDesc").load("/admin/next_step_desc_simulator");
             $("#nextStop").load("/admin/next_stop_simulator");
+
+            getSpeed();
         }
 
         function checkReload() {
