TemplateSoccerPlayer: un botón permite cambiar entre "editar salaries" o no

--- a/admin/public/css/dashboard.css
+++ b/admin/public/css/dashboard.css
@@ -94,3 +94,9 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+.btn-with-symbol {
+  /*padding-left: 35px; /* XD */
+  padding-left: 25px; /* SD */
+}
+
