--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -1,4 +1,4 @@
-@(soccers: List[model.TemplateSoccerPlayer], templateSoccerTeamMap: HashMap[org.bson.types.ObjectId, model.TemplateSoccerTeam])
+@(soccers: List[model.TemplateSoccerPlayer], templateSoccerTeamMap: HashMap[org.bson.types.ObjectId, model.TemplateSoccerTeam], canEditSalaries: Boolean)
 
 @import controllers.admin.routes._
 
@@ -32,6 +32,14 @@
 
 <h1 class="page-header">Template Soccer Players</h1>
 
+<div class="btn-group" style="display:inline-block;">
+@if(canEditSalaries) {
+    <a href="@TemplateSoccerPlayerController.index" class="btn btn-with-symbol btn-warning stop">Edit Salaries</a>
+} else {
+    <a href="@TemplateSoccerPlayerController.editSalaries" class="btn btn-with-symbol btn-success play">Edit Salaries</a>
+}
+</div>
+
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
     <table id="table_id" class="table table-striped">
@@ -54,7 +62,7 @@
             <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.fieldPos</td>
-            <td class="edit-salary" contenteditable="true" data-player-id=@p.templateSoccerPlayerId>@p.salary</td>
+            <td class="edit-salary" contenteditable=@canEditSalaries data-player-id=@p.templateSoccerPlayerId>@p.salary</td>
             <td><a href="@TemplateSoccerPlayerController.showStats(p.templateSoccerPlayerId.toString())">@p.fantasyPoints</a></td>
             <td>@p.stats.length</td>
             <td><a href="@TemplateSoccerTeamController.show(p.templateTeamId.toString())">@templateSoccerTeamMap(p.templateTeamId).name</a></td>
