--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -3,16 +3,33 @@
 @import controllers.admin.routes._
 @import model.GlobalDate
 
-@main("Opta Events - Admin") {
+@scripts = {
+    <script type="text/javascript">
+      /* Table initialisation */
+      $(document).ready(function() {
+        $('#ajax_table_id').dataTable( {
+          "iDisplayLength": 100,
+          "bProcessing": true,
+          "aaSorting": [[ 0, "asc" ]],
+          "bServerSide": true,
+          "bJQueryUI": true,
+          "sPaginationType": "full_numbers",
+          "sAjaxSource": "/admin/opta_events_ajax"
+        });
+      });
+    </script>
+}
+
+@main("Opta Events - Admin", scripts) {
 
 <h1 class="page-header">Opta Events</h1>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
+    <table id="ajax_table_id" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
+            <th>Points Translation Id</th>
             <th>CompetitionId</th>
             <th>GameId</th>
             <th>HomeTeamId</th>
