--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -1,4 +1,4 @@
-@(contests: List[model.Contest])
+@()
 
 @import model._
 @import controllers.admin.routes._
@@ -19,6 +19,16 @@
 
         $(document).ready( function(){
             window.setInterval(updatePage, 10000);
+
+            $('#ajax_table_id').dataTable( {
+              "iDisplayLength": 100,
+              "bProcessing": true,
+              "aaSorting": [[ 0, "asc" ]],
+              "bServerSide": true,
+              "bJQueryUI": true,
+              "sPaginationType": "full_numbers",
+              "sAjaxSource": "/admin/contests/ajax"
+            });
         })
 
     </script>
@@ -43,10 +53,9 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
+    <table id="ajax_table_id" class="table table-striped">
         <thead>
         <tr>
-            <!--th>Id</th-->
             <th>Name</th>
             <th>Current Users</th>
             <th>Max Entries</th>
@@ -55,18 +64,9 @@
         </tr>
         </thead>
         <tbody>
-        @for(p <- contests) {
-        <tr>
-            <!--td>@p.contestId</td-->
-            <td><a href="@ContestController.show(p.contestId.toString())">@p.name</a></td>
-            <td>@p.contestEntries.size()</td>
-            <td>@p.maxEntries</td>
-            <td><a href="@TemplateContestController.show(p.templateContestId.toString())">@p.templateContestId</a></td>
-            <td>@contest_state(p.templateContestId.toString())</td>
-         </tr>
-        }
         </tbody>
     </table>
 </div>
 
+<br/>
 }
