--- a/admin/app/views/match_event.scala.html
+++ b/admin/app/views/match_event.scala.html
@@ -7,10 +7,10 @@
 
 <h1 class="page-header">Match Event</h1>
 
-@if(match_event.isFinished()) {
+@if(match_event.isGameFinished()) {
     <button class="btn btn-danger state_match_event">Finished</button>
 } else {
-    @if(match_event.isStarted()) {
+    @if(match_event.isGameStarted()) {
         <button class="btn btn-success state_match_event">@match_event.period: @match_event.minutesPlayed min.</button>
     } else {
         <button class="btn btn-warning state_match_event">Waiting</button>
@@ -25,7 +25,7 @@
         <thead>
         <caption>
             @match_event.soccerTeamA.name
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             (@match_event.getFantasyPoints(match_event.soccerTeamA))
             }
         </caption>
@@ -36,7 +36,7 @@
             <th>Salary</th>
             <th>Played Matches</th>
             <th>Fantasy Points</th>
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             <th>Live Points</th>
             }
         </tr>
@@ -50,7 +50,7 @@
             <td>@p.salary</td>
             <td>@p.playedMatches</td>
             <td>@p.fantasyPoints</td>
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             <td><a href="@TemplateSoccerPlayerController.showFantasyPointsInMatchEvent(match_event.templateMatchEventId.toString(), p.templateSoccerPlayerId.toString())">
                 @match_event.getFantasyPoints(p.templateSoccerPlayerId)
             </a></td>
@@ -62,7 +62,7 @@
     <table class="table table-striped">
         <caption>
             @match_event.soccerTeamB.name
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             (@match_event.getFantasyPoints(match_event.soccerTeamB))
             }
         </caption>
@@ -74,7 +74,7 @@
             <th>Salary</th>
             <th>Played Matches</th>
             <th>Fantasy Points</th>
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             <th>Live Points</th>
             }
         </tr>
@@ -88,7 +88,7 @@
             <td>@p.salary</td>
             <td>@p.playedMatches</td>
             <td>@p.fantasyPoints</td>
-            @if(match_event.isStarted()) {
+            @if(match_event.isGameStarted()) {
             <td><a href="@TemplateSoccerPlayerController.showFantasyPointsInMatchEvent(match_event.templateMatchEventId.toString(), p.templateSoccerPlayerId.toString())">
                 @match_event.getFantasyPoints(p.templateSoccerPlayerId)
             </a></td>
