--- a/admin/app/views/match_event_list.scala.html
+++ b/admin/app/views/match_event_list.scala.html
@@ -25,10 +25,10 @@
 }
 
 @match_event_state(match_event : model.MatchEvent) = {
-    @if(match_event.isFinished()) {
+    @if(match_event.isGameFinished()) {
         <button class="btn btn-danger state_match_event">Finished</button>
     } else {
-        @if(match_event.isStarted()) {
+        @if(match_event.isGameStarted()) {
             <button class="btn btn-success state_match_event">@match_event.period: @match_event.minutesPlayed min.</button>
         } else {
             <button class="btn btn-warning state_match_event">Waiting</button>
@@ -63,7 +63,7 @@
             <td>@p.soccerTeamB.optaTeamId</td>
             <td>
                 <a href="@MatchEventController.show(p.matchEventId.toString())">
-                    @if(p.isStarted()) {
+                    @if(p.isGameStarted()) {
                         @p.soccerTeamA.name (@p.getFantasyPoints(p.soccerTeamA)) vS @p.soccerTeamB.name (@p.getFantasyPoints(p.soccerTeamB))
                     } else {
                         @p.soccerTeamA.name vS @p.soccerTeamB.name
