--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -1,4 +1,4 @@
-@(template_contests: List[model.TemplateContest])
+@()
 
 @import model._
 @import controllers.admin.routes._
@@ -19,30 +19,19 @@
 
         $(document).ready( function(){
             window.setInterval(updatePage, 10000);
+
+            $('#ajax_table_id').dataTable( {
+              "iDisplayLength": 100,
+              "bProcessing": true,
+              "aaSorting": [[ 0, "asc" ]],
+              "bServerSide": true,
+              "bJQueryUI": true,
+              "sPaginationType": "full_numbers",
+              "sAjaxSource": "/admin/template_contests/ajax"
+            });
         })
 
     </script>
-}
-
-@template_contest_state(templateContest : TemplateContest) = {
-    @{templateContest.state match {
-        case TemplateContest.State.HISTORY  => <button class="btn btn-danger">{templateContest.state}</button>
-        case TemplateContest.State.LIVE     => <button class="btn btn-success">{templateContest.state}</button>
-        case TemplateContest.State.ACTIVE   => <button class="btn btn-warning">{templateContest.state}</button>
-        case _                              => <button class="btn btn-warning disabled">{templateContest.state}</button>
-    }}
-}
-
-@match_events_state(template_contest_id : String) = {
-    @if(TemplateContest.isFinished(template_contest_id)) {
-        <button class="btn btn-danger" value="@template_contest_id">Finished</button>
-    } else {
-        @if(TemplateContest.isStarted(template_contest_id)) {
-            <button class="btn btn-success" value="@template_contest_id">Live</button>
-        } else {
-            <button class="btn btn-warning" value="@template_contest_id">Waiting</button>
-        }
-    }
 }
 
 @main("Template Contests - Admin", scripts) {
@@ -54,10 +43,9 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
+    <table id="ajax_table_id" class="table table-striped">
         <thead>
         <tr>
-            <!--th>Id</th-->
             <th>State</th>
             <th>Name</th>
             <th>Num. Matches</th>
@@ -68,39 +56,11 @@
             <th>Prize Type</th>
             <th>Start Date</th>
             <th>Activation At</th>
-            <th>State</th>
             <th></th>
             <th></th>
         </tr>
         </thead>
         <tbody>
-        @for(p <- template_contests) {
-        <tr>
-            <!--td>@p.templateContestId</td-->
-            <td>@template_contest_state(p)</td>
-            <td><a href="@TemplateContestController.show(p.templateContestId.toString())" style="white-space: nowrap">@p.name</a></td>
-            <td>@p.templateMatchEventIds.size()</td>
-            <td>@p.minInstances</td>
-            <td>@p.maxEntries</td>
-            <td>@p.salaryCap</td>
-            <td>@p.entryFee</td>
-            <td>@p.prizeType</td>
-            <td>@GlobalDate.formatDate(p.startDate)</td>
-            <td>@GlobalDate.formatDate(p.activationAt)</td>
-            <td>@match_events_state(p.templateContestId.toString)</td>
-            @if(p.isOff) {
-                <td>
-                    <a href="@TemplateContestController.edit(p.templateContestId.toString())"><button class="btn btn-success">Edit</button></a>
-                </td>
-                <td>
-                    <a href="@TemplateContestController.destroy(p.templateContestId.toString())"><button class="btn btn-danger">-</button></a>
-                </td>
-            } else {
-                <td></td>
-                <td></td>
-            }
-        </tr>
-        }
         </tbody>
     </table>
 </div>
