--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -55,6 +55,7 @@
 
 <body>
 
+<!--
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -79,6 +80,7 @@
         </div>
     </div>
 </div>
+-->
 
 <div class="container-fluid">
     <div class="row">
@@ -125,7 +127,7 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
 <script src="/js/jquery.dataTables.js"></script>
 <script src="/js/dataTables.bootstrap.js"></script>
 <!--script src="//cdn.datatables.net/1.10.0/js/jquery.dataTables.js"></script>
