refactorización de las páginas que incluyen DataTables

--- a/admin/app/views/contest.scala.html
+++ b/admin/app/views/contest.scala.html
@@ -1,12 +1,9 @@
-@(contest: model.Contest, map: Map[Integer, String])
+@(contest: model.Contest)
 
 
 @main("Contest - Admin") {
 
 <h1 class="page-header">Contest: @contest.name</h1>
-
-<p>@map(0)</p>
-<p>@map(1)</p>
 
 <a href='AdminController.contests'>Back to Contests</a>
 
