--- a/admin/app/views/contest_entry_list.scala.html
+++ b/admin/app/views/contest_entry_list.scala.html
@@ -2,7 +2,44 @@
 
 @import controllers.admin.routes._
 
-@main("Contest Entry - Admin") {
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_id').dataTable( {
+                "columns": [
+                    { "title": "UserId" },
+                    { "title": "Soccer 1" },
+                    { "title": "Soccer 2" },
+                    { "title": "Soccer 3" },
+                    { "title": "Soccer 4" },
+                    { "title": "Soccer 5" },
+                    { "title": "Soccer 6" },
+                    { "title": "Soccer 7" },
+                    { "title": "Soccer 8" },
+                    { "title": "Soccer 9" },
+                    { "title": "Soccer 10" },
+                    { "title": "Soccer 11" }
+                ],
+                "data": [
+                    @for((p, index) <- contest_entries.zipWithIndex) {
+                        [
+                            "p.contestEntryId",
+                            "@p.userId",
+                            @for((id, index2) <- p.soccerIds.zipWithIndex) {
+                                "@id" @if(index2 < p.soccerIds.size-1) { , }
+                            }
+                        ] @if(index < contest_entries.size-1) { , }
+                    }
+                ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Contest Entry - Admin", scripts) {
 
 <h1 class="page-header">Contest Entries</h1>
 
@@ -10,36 +47,7 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>UserId</th>
-            <th>Soccer 1</th>
-            <th>Soccer 2</th>
-            <th>Soccer 3</th>
-            <th>Soccer 4</th>
-            <th>Soccer 5</th>
-            <th>Soccer 6</th>
-            <th>Soccer 7</th>
-            <th>Soccer 8</th>
-            <th>Soccer 9</th>
-            <th>Soccer 10</th>
-            <th>Soccer 11</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- contest_entries) {
-        <tr>
-            <td>@p.contestEntryId</td>
-            <td>@p.userId</td>
-            @for(id <- p.soccerIds) {
-                <td>@id</td>
-            }
-        </tr>
-        }
-        </tbody>
-    </table>
+    <table id="ajax_table_id" class="table table-striped"></table>
 </div>
 
 <a href='@DashboardController.index'>Back to Dashboard</a>
