--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -21,6 +21,13 @@
             window.setInterval(updatePage, 10000);
 
             $('#ajax_table_id').dataTable( {
+              "columns": [
+                { "title": "Name" },
+                { "title": "Current Users" },
+                { "title": "Max Entries" },
+                { "title": "TemplateContestId" },
+                { "title": "State" }
+              ],
               "iDisplayLength": 100,
               "bProcessing": true,
               "aaSorting": [[ 0, "asc" ]],
@@ -40,18 +47,6 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="ajax_table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Current Users</th>
-            <th>Max Entries</th>
-            <th>TemplateContestId</th>
-            <th>State</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <table id="ajax_table_id" class="table table-striped"></table>
 </div>
 }
