--- a/admin/app/views/opta_match_event_list.scala.html
+++ b/admin/app/views/opta_match_event_list.scala.html
@@ -3,44 +3,53 @@
 @import controllers.admin.routes._
 @import model.GlobalDate
 
-@main("Opta Match Events - Admin") {
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_id').dataTable( {
+               "columns": [
+                    { "title": "Id" },
+                    { "title": "CompetitionId" },
+                    { "title": "Competition Name" },
+                    { "title": "SeasonId" },
+                    { "title": "SeasonName" },
+                    { "title": "HomeTeamId" },
+                    { "title": "AwayTeamId" },
+                    { "title": "Match Date" },
+                    { "title": "Last Modified" }
+                ],
+                "data": [
+                    @for((p, index) <- match_events.zipWithIndex) {
+                        [
+                            "@p.optaMatchEventId",
+                            "@p.competitionId",
+                            "@p.competitionName",
+                            "@p.seasonId",
+                            "@p.seasonName",
+                            "@p.homeTeamId",
+                            "@p.awayTeamId",
+                            "@GlobalDate.formatDate(p.matchDate)",
+                             @if(p.lastModified != null) {
+                                "@GlobalDate.formatDate(p.lastModified)"
+                             } else {
+                                "-"
+                             }
+                        ] @if(index < match_events.size-1) { , }
+                    }
+                ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Opta Match Events - Admin", scripts) {
 
 <h1 class="page-header">Opta Match Events</h1>
 
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>CompetitionId</th>
-            <th>Competition Name</th>
-            <th>SeasonId</th>
-            <th>SeasonName</th>
-            <th>HomeTeamId</th>
-            <th>AwayTeamId</th>
-            <th>Match Date</th>
-            <th>Last Modified</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- match_events) {
-        <tr>
-            <td>@p.optaMatchEventId</td>
-            <td>@p.competitionId</td>
-            <td>@p.competitionName</td>
-            <td>@p.seasonId</td>
-            <td>@p.seasonName</td>
-            <td>@p.homeTeamId</td>
-            <td>@p.awayTeamId</td>
-            <td>@GlobalDate.formatDate(p.matchDate)</td>
-        @if(p.lastModified != null) {
-            <td>@GlobalDate.formatDate(p.lastModified)</td>
-        } else {
-            <td></td>
-        }
-        </tr>
-        }
-        </tbody>
-    </table>
+    <table id="ajax_table_id" class="table table-striped"></table>
 </div>
 }
