--- a/admin/app/views/opta_soccer_team_list.scala.html
+++ b/admin/app/views/opta_soccer_team_list.scala.html
@@ -2,30 +2,40 @@
 
 @import controllers.admin.routes._
 
-@main("Opta Soccer Teams - Admin") {
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_id').dataTable( {
+                "columns": [
+                    { "title": "Id" },
+                    { "title": "Name" },
+                    { "title": "ShortName" },
+                    { "title": "Updated Time" }
+                ],
+                "data": [
+                    @for((p, index) <- teams.zipWithIndex) {
+                        [
+                            "@p.optaTeamId",
+                            "@p.name",
+                            "@p.shortName",
+                            "@p.updatedTime"
+                        ] @if(index < teams.size-1) { , }
+                    }
+                ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Opta Soccer Teams - Admin", scripts) {
 
 <h1 class="page-header">Opta Soccer Teams</h1>
 
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>ShortName</th>
-            <th>Updated Time</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- teams) {
-        <tr>
-            <td>@p.optaTeamId</td>
-            <td>@p.name</td>
-            <td>@p.shortName</td>
-            <td>@p.updatedTime</td>
-        </tr>
-        }
-        </tbody>
+    <table id="ajax_table_id" class="table table-striped">
     </table>
 </div>
 }
