--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -63,6 +63,15 @@
 
         $(document).ready( function(){
             $('#ajax_table_id').dataTable( {
+              "columns": [
+                { "title": "OptaId" },
+                { "title": "Name" },
+                { "title": "Field" },
+                { "title": "Salary" },
+                { "title": "Fantasy Points" },
+                { "title": "Played Matches" },
+                { "title": "Team ID" }
+              ],
               "iDisplayLength": 100,
               "bProcessing": true,
               "aaSorting": [[ 0, "asc" ]],
@@ -93,20 +102,6 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table id="ajax_table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <th>OptaId</th>
-            <th>Name</th>
-            <th>Field Pos</th>
-            <th>Salary</th>
-            <th>Fantasy Points</th>
-            <th>Played Matches</th>
-            <th>Team ID</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <table id="ajax_table_id" class="table table-striped"></table>
 </div>
 }
