--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -1,35 +1,47 @@
 @(users: List[model.User])
 
+@import model._
 @import controllers.admin.routes.DashboardController
 
-@main("Users - Admin") {
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_id').dataTable( {
+                "columns": [
+                    { "title": "Id" },
+                    { "title": "FirstName" },
+                    { "title": "LastName" },
+                    { "title": "NickName" },
+                    { "title": "Email" },
+                    { "title": "Created At" },
+                    { "title": "Wins" }
+                ],
+                "data": [
+                    @for((p, index) <- users.zipWithIndex) {
+                        [
+                            "@p.userId",
+                            "@p.firstName",
+                            "@p.lastName",
+                            "@p.nickName",
+                            "@p.email",
+                            "@GlobalDate.formatDate(p.createdAt)",
+                            "@p.wins"
+                        ] @if(index < users.size-1) { , }
+                    }
+                ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Users - Admin", scripts) {
 
 <h1 class="page-header">Users</h1>
 
 <div class="table-responsive">
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>FirstName</th>
-            <th>LastName</th>
-            <th>NickName</th>
-            <th>Email</th>
-            <!--th>Password</th-->
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- users) {
-        <tr>
-            <td>@p.userId</td>
-            <td>@p.firstName</td>
-            <td>@p.lastName</td>
-            <td>@p.nickName</td>
-            <td>@p.email</td>
-            <!--td>@p.password</td-->
-        </tr>
-        }
-        </tbody>
-    </table>
+    <table id="ajax_table_id" class="table table-striped"></table>
 </div>
 }
