refactorizacion de los import_html

--- a/admin/app/views/refresher.scala.html
+++ b/admin/app/views/refresher.scala.html
@@ -95,7 +95,7 @@
     <br/>
 
     <div class="btn-group">
-            <a class="btn btn-sim btn-primary ajax play import disabled" href="@RefresherController.importFromLast" title="Synchronize all documents from Opta.">
+            <a class="btn btn-with-symbol btn-primary ajax play import disabled" href="@RefresherController.importFromLast" title="Synchronize all documents from Opta.">
                 Import
             </a>
     </div>
