--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -3,7 +3,61 @@
 @import controllers.admin.routes.ImportController
 @import model.GlobalDate
 
-@main("Import Match Events - Admin") {
+@include_columns() = {
+    { "title": "Id" },
+    { "title": "Competition Name" },
+    { "title": "SeasonId" },
+    { "title": "SeasonName" },
+    { "title": "HomeTeamId" },
+    { "title": "AwayTeamId" },
+    { "title": "Match Date" }
+}
+
+@include_matchs(match_list : List[model.opta.OptaMatchEvent]) = {
+    @for((p, index) <- match_list.zipWithIndex) {
+        [
+            "@p.optaMatchEventId",
+            "@p.competitionName",
+            "@p.seasonId",
+            "@p.seasonName",
+            "@p.homeTeamId",
+            "@p.awayTeamId",
+            "@GlobalDate.formatDate(p.matchDate)"
+        ] @if(index < match_list.size-1) { , }
+    }
+}
+
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_new').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_matchs(matchs_new) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_changed').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_matchs(matchs_changed) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_invalid').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_matchs(matchs_invalid) ],
+                stateSave: true,
+                iDisplayLength: 10,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Import Match Events - Admin", scripts) {
 
 <h1 class="page-header">Import Match Events</h1>
 
@@ -17,66 +71,22 @@
 
 <div class="col-md-6">
     @if(matchs_new != null && !matchs_new.isEmpty) {
-
     <div><a href="@ImportController.importAllNewMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import New (@matchs_new.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_new" class="table table-striped table-responsive">
         <caption class="bg-primary">NEW</caption>
-        <tr>
-            <th>Id</th>
-            <th>Competition Name</th>
-            <th>SeasonId</th>
-            <th>SeasonName</th>
-            <th>HomeTeamId</th>
-            <th>AwayTeamId</th>
-            <th>Match Date</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- matchs_new) {
-        <tr>
-            <td>@p.optaMatchEventId</td>
-            <td>@p.competitionName</td>
-            <td>@p.seasonId</td>
-            <td>@p.seasonName</td>
-            <td>@p.homeTeamId</td>
-            <td>@p.awayTeamId</td>
-            <td>@GlobalDate.formatDate(p.matchDate)</td>
-        </tr>
-        }
-        </tbody>
     </table>
     }
 </div>
 
 <div class="col-md-6">
     @if(matchs_changed != null && !matchs_changed.isEmpty) {
-
     <div><a href="@ImportController.importAllChangedMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import Changed (@matchs_changed.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_changed" class="table table-striped table-responsive">
         <caption class="bg-info">CHANGED</caption>
-        <tr>
-            <th>Id</th>
-            <th>Competition Name</th>
-            <th>SeasonId</th>
-            <th>SeasonName</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- matchs_changed) {
-        <tr>
-            <td>@p.optaMatchEventId</td>
-            <td>@p.competitionName</td>
-            <td>@p.seasonId</td>
-            <td>@p.seasonName</td>
-        </tr>
-        }
-        </tbody>
     </table>
 
     }
@@ -84,32 +94,8 @@
 
 <div class="col-md-12">
     @if(matchs_invalid != null && !matchs_invalid.isEmpty) {
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_invalid" class="table table-striped table-responsive">
         <caption class="bg-danger">INVALID</caption>
-        <tr>
-            <th>Id</th>
-            <th>Competition Name</th>
-            <th>SeasonId</th>
-            <th>SeasonName</th>
-            <th>HomeTeamId</th>
-            <th>AwayTeamId</th>
-            <th>Match Date</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- matchs_invalid) {
-        <tr>
-            <td>@p.optaMatchEventId</td>
-            <td>@p.competitionName</td>
-            <td>@p.seasonId</td>
-            <td>@p.seasonName</td>
-            <td>@p.homeTeamId</td>
-            <td>@p.awayTeamId</td>
-            <td>@GlobalDate.formatDate(p.matchDate)</td>
-        </tr>
-        }
-        </tbody>
     </table>
     }
 </div>
