--- a/admin/app/views/import_soccers.scala.html
+++ b/admin/app/views/import_soccers.scala.html
@@ -2,7 +2,57 @@
 
 @import controllers.admin.routes.ImportController
 
-@main("Import Soccers - Admin") {
+@include_columns() = {
+    { "title": "Id" },
+    { "title": "Name" },
+    { "title": "Position" },
+    { "title": "Team ID" },
+    { "title": "Team Name" }
+}
+
+@include_soccers(soccer_list : List[model.opta.OptaPlayer]) = {
+    @for((p, index) <- soccer_list.zipWithIndex) {
+        [
+            "@p.optaPlayerId",
+            "@p.name",
+            "@p.position",
+            "@p.teamId",
+            "@p.teamName"
+        ] @if(index < soccer_list.size-1) { , }
+    }
+}
+
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_new').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_soccers(soccers_new) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_changed').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_soccers(soccers_changed) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_invalid').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_soccers(soccers_invalid) ],
+                stateSave: true,
+                iDisplayLength: 10,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Import Soccers - Admin", scripts) {
 
 <h1 class="page-header">Import Soccers</h1>
 
@@ -16,97 +66,30 @@
 
 <div class="col-md-6">
     @if(soccers_new != null && !soccers_new.isEmpty) {
-
     <div><a href="@ImportController.importAllNewSoccers"><button name="ok" type="submit" class="btn btn-success">Import New (@soccers_new.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_new" class="table table-striped table-responsive">
         <caption class="bg-primary">NEW</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Team ID</th>
-            <th>Team Name</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- soccers_new) {
-        <tr>
-            <td>@p.optaPlayerId</td>
-            <td>@p.name</td>
-            <td>@p.position</td>
-            <td>@p.teamId</td>
-            <td>@p.teamName</td>
-        </tr>
-        }
-        </tbody>
     </table>
-
     }
 </div>
 
 <div class="col-md-6">
     @if(soccers_changed != null && !soccers_changed.isEmpty) {
-
     <div><a href="@ImportController.importAllChangedSoccers"><button name="ok" type="submit" class="btn btn-success">Import Changed (@soccers_changed.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_changed" class="table table-striped table-responsive">
         <caption class="bg-info">CHANGED</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Team ID</th>
-            <th>Team Name</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- soccers_changed) {
-        <tr>
-            <td>@p.optaPlayerId</td>
-            <td>@p.name</td>
-            <td>@p.position</td>
-            <td>@p.teamId</td>
-            <td>@p.teamName</td>
-        </tr>
-        }
-        </tbody>
     </table>
-
     }
 </div>
 
 <div class="col-md-12">
     @if(soccers_invalid != null && !soccers_invalid.isEmpty) {
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_invalid" class="table table-striped table-responsive">
         <caption class="bg-danger">INVALID</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Team ID</th>
-            <th>Team Name</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- soccers_invalid) {
-        <tr>
-            <td>@p.optaPlayerId</td>
-            <td>@p.name</td>
-            <td>@p.position</td>
-            <td>@p.teamId</td>
-            <td>@p.teamName</td>
-        </tr>
-        }
-        </tbody>
     </table>
     }
 </div>
