--- a/admin/app/views/import_teams.scala.html
+++ b/admin/app/views/import_teams.scala.html
@@ -2,7 +2,53 @@
 
 @import controllers.admin.routes.ImportController
 
-@main("Import Teams - Admin") {
+@include_columns() = {
+    { "title": "Id" },
+    { "title": "Name" },
+    { "title": "ShortName" }
+}
+
+@include_teams(team_list : List[model.opta.OptaTeam]) = {
+    @for((p, index) <- team_list.zipWithIndex) {
+        [
+            "@p.optaTeamId",
+            "@p.name",
+            "@p.shortName"
+        ] @if(index < team_list.size-1) { , }
+    }
+}
+
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#ajax_table_new').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_teams(teams_new) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_changed').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_teams(teams_changed) ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
+            $('#ajax_table_invalid').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_teams(teams_invalid) ],
+                stateSave: true,
+                iDisplayLength: 10,
+                "deferRender": true
+            } );
+        })
+    </script>
+}
+
+@main("Import Teams - Admin", scripts) {
 
 <h1 class="page-header">Import Teams</h1>
 
@@ -16,57 +62,22 @@
 
 <div class="col-md-6">
     @if(teams_new != null && !teams_new.isEmpty) {
-
     <div><a href="@ImportController.importAllNewTeams"><button name="ok" type="submit" class="btn btn-success">Import New (@teams_new.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_new" class="table table-striped table-responsive">
         <caption class="bg-primary">NEW</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>ShortName</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- teams_new) {
-        <tr>
-            <td>@p.optaTeamId</td>
-            <td>@p.name</td>
-            <td>@p.shortName</td>
-        </tr>
-        }
-        </tbody>
     </table>
-
     }
 </div>
 
 <div class="col-md-6">
     @if(teams_changed != null && !teams_changed.isEmpty) {
-
     <div><a href="@ImportController.importAllChangedTeams"><button name="ok" type="submit" class="btn btn-success">Import Changed (@teams_changed.size)</button></a></div>
     <br/>
 
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_changed" class="table table-striped table-responsive">
         <caption class="bg-info">CHANGED</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>ShortName</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- teams_changed) {
-        <tr>
-            <td>@p.optaTeamId</td>
-            <td>@p.name</td>
-            <td>@p.shortName</td>
-        </tr>
-        }
-        </tbody>
     </table>
 
     }
@@ -74,24 +85,8 @@
 
 <div class="col-md-12">
     @if(teams_invalid != null && !teams_invalid.isEmpty) {
-    <table class="table table-striped datatable">
-        <thead>
+    <table id="ajax_table_invalid" class="table table-striped table-responsive">
         <caption class="bg-danger">INVALID</caption>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>ShortName</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- teams_invalid) {
-        <tr>
-            <td>@p.optaTeamId</td>
-            <td>@p.name</td>
-            <td>@p.shortName</td>
-        </tr>
-        }
-        </tbody>
     </table>
     }
 </div>
