refactor import_*_html

--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -59,6 +59,13 @@
 
 @main("Import Match Events - Admin", scripts) {
 
+<ul class="nav nav-tabs" role="tablist">
+    <li><a href="@ImportController.showImportTeams" role="tab">Import Teams</a></li>
+    <li><a href="@ImportController.showImportSoccers" role="tab">Import SoccerPlayers</a></li>
+    <li class="active"><a href="@ImportController.showImportMatchEvents" role="tab">Import MatchEvents</a></li>
+</ul>
+<br/>
+
 <h1 class="page-header">Import Match Events</h1>
 
 <h2 class="sub-header"></h2>
