--- a/admin/app/views/import_teams.scala.html
+++ b/admin/app/views/import_teams.scala.html
@@ -50,6 +50,13 @@
 
 @main("Import Teams - Admin", scripts) {
 
+<ul class="nav nav-tabs" role="tablist">
+    <li class="active"><a href="@ImportController.showImportTeams" role="tab">Import Teams</a></li>
+    <li><a href="@ImportController.showImportSoccers" role="tab">Import SoccerPlayers</a></li>
+    <li><a href="@ImportController.showImportMatchEvents" role="tab">Import MatchEvents</a></li>
+</ul>
+<br/>
+
 <h1 class="page-header">Import Teams</h1>
 
 <h2 class="sub-header"></h2>
