--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -15,9 +15,9 @@
     <a class="btn btn-primary" href="@ImportController.importSalaries" title="Import Players' salaries from a CSV file.">
         Import Salaries
     </a>
-    <a href="@ImportController.showImportTeams"><button class="btn btn-warning">Import Teams</button></a>
-    <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import SoccerPlayers</button></a>
-    <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
+    <a href="@ImportController.showImportTeams" class="btn btn-warning">Import Teams</a>
+    <a href="@ImportController.showImportSoccers" class="btn btn-warning">Import SoccerPlayers</a>
+    <a href="@ImportController.showImportMatchEvents" class="btn btn-warning">Import MatchEvents</a>
 </div>
 
 <br/>
