--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -106,6 +106,7 @@
                 <li><a href="@TemplateSoccerPlayerController.index">Template Soccer Players</a></li>
             </ul>
             <ul class="nav nav-sidebar">
+                <li><a href="@OptaController.optaCompetitions">Opta Competitions</a></li>
                 <li><a href="@OptaController.optaSoccerPlayers">Opta Players</a></li>
                 <li><a href="@OptaController.optaSoccerTeams">Opta Teams</a></li>
                 <li><a href="@OptaController.optaMatchEvents">Opta Match Events</a></li>
